# ClawScholar

./: .env.example  .gitignore  AGENTS.md  Makefile  README.md  README_en.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_add_chat_schedule_document_enhancements.py  002_add_projects_and_document_chunks.py  003_add_writer_agent.py  004_change_target_pages_to_numeric.py  005_ensure_document_chunks.py  006_add_writing_intent_to_goals.py  007_link_writer_runs_to_projects.py
backend/app/: config.py  main.py
backend/app/agents/: orchestrator.py
backend/app/agents/analyst/: models.py  prompts.py  sandbox_client.py
backend/app/agents/librarian/: models.py  prompts.py
backend/app/agents/scheduler/: models.py  prompts.py
backend/app/agents/writer/: models.py  prompts.py  writer_orchestrator.py
backend/app/api/: deps.py  websocket.py
backend/app/api/v1/: agents.py  auth.py  chat.py  documents.py  goals.py  projects.py  router.py  (+4 more)
backend/app/core/: database.py  exceptions.py  logging.py  redis.py  security.py
backend/app/llm/: client.py
backend/app/models/: agent_log.py  base.py  chat.py  document.py  goal.py  project.py  schedule_event.py  user.py  validation.py  workflow.py  writing_output.py  writing_run.py  writing_section.py
backend/app/schemas/: agent.py  chat.py  document.py  goal.py  project.py  schedule.py  user.py  validation.py  workflow.py
backend/app/services/: auth_service.py  document_service.py  export_service.py  literature_search.py  notification_service.py  pdf_content.py  pdf_download.py  workflow_service.py  writer_coverage_service.py  writer_service.py  writer_source_service.py
backend/app/skills/: ANALYST_SKILL.md  LIBRARIAN_SKILL.md  SCHEDULER_SKILL.md  SOUL.md  WRITER_SKILL.md
backend/app/tasks/: cleanup_tasks.py  embedding_tasks.py  worker.py
(+102 files in other folders)
