[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta:__legacy__"

[project]
name = "clawscholar-backend"
version = "0.1.0"
description = "ClawScholar — Research-Grade Multi-Agent Academic Workflow Engine"
requires-python = ">=3.12"
dependencies = [
    # Web framework
    "fastapi>=0.111.0",
    "uvicorn[standard]>=0.29.0",
    "python-multipart>=0.0.9",

    # Async DB
    "sqlalchemy[asyncio]>=2.0.30",
    "asyncpg>=0.29.0",
    "alembic>=1.13.1",
    "pgvector>=0.2.5",

    # Pydantic
    "pydantic>=2.7.0",
    "pydantic-settings>=2.2.1",
    "email-validator>=2.2.0",

    # AI / LLM
    "openai>=1.30.0",

    # Redis / Task Queue
    "redis[hiredis]>=5.0.4",
    "arq>=0.25.0",

    # Auth
    "python-jose[cryptography]>=3.3.0",
    "passlib[bcrypt]>=1.7.4",

    # HTTP
    "httpx>=0.27.0",

    # Logging
    "structlog>=24.1.0",

    # File parsing
    "pandas>=2.2.2",
    "openpyxl>=3.1.2",
    "pypdf>=4.2.0",
    "pdfminer.six>=20250506",

    # Text processing for BM25
    "rank-bm25>=0.2.2",
    "tiktoken>=0.7.0",

    # Literature search
    "arxiv>=2.1.0",
    "biopython>=1.84",

    # Document export (Writer Agent)
    "python-docx>=1.1.0",
    "reportlab>=4.2.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.7",
    "pytest-cov>=5.0.0",
    "httpx>=0.27.0",
    "ruff>=0.4.5",
    "mypy>=1.10.0",
    "types-passlib",
    "types-python-jose",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["app*"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.12"
strict = true
ignore_missing_imports = true
